--- a/config/tmux/tmux_statusline.conf
+++ b/config/tmux/tmux_statusline.conf
@@ -4,66 +4,39 @@
 # Uncomment the style to apply
 # Status line configuration - check FORMATS and COMMANDS section
 
-# Style 1
-c_line_bg="#[bg=colour237]"                 # 237 #3a3a3a
-c_line_bg_status="bg=colour237"             # 237 #3a3a3a
-c_pane_active="fg=colour246"                # 246 #949494
-c_pane_border="fg=colour238"                # 238 #444444
-c_message="bg=colour17,fg=colour34"         #  17 #00005f 34 #00af00
-c_session_bg="#[bg=colour235]"              # 235 #262626
-c_session="#[fg=colour185]"                 # 185 #d7d75f
-c_window_active_bg="#[bg=colour236]"        # 236 #303030
-c_window_active_index="#[fg=colour215]"     # 215 #ffaf5f
-c_window_active_name="#[fg=colour167]"      # 167 #d75f5f
-c_window_active_flag="#[fg=colour51]"       #  51 #00ffff
-c_window_inactive_bg="#[bg=colour239]"      # 239 #4e4e4e
-c_window_inactive_index="#[fg=colour107]"   # 107 #87af5f
-c_window_inactive_name="#[fg=colour39]"     #  39 #00afff
-c_window_inactive_flag="#[fg=colour51]"     #  51 #00ffff
-c_hostname_bg="#[bg=colour235]"             # 235 #262626
-c_hostname="#[fg=colour185]"                # 185 #d7d75f
-c_hostname_symbol="#[fg=colour40]"          #  40 #00d700
-c_date_bg="#[bg=colour235]"                 # 235 #262626
-c_date="#[fg=colour185]"                    # 185 #d7d75f
-c_date_symbol="#[fg=colour40]"              #  40 #00d700
+# Monokai.dark (classic) from Terminal.sexy
+c_black="#272822"
+c_grey="#75715e"
+c_red="#f92672"
+c_green="#a6e22e"
+c_orange="#fd971f" 
+c_yellow="#ffd866"
+c_blue="#66d9ef"
+c_cyan="#a1efe4"
+c_purple="#ae81ff"
+c_white="#f8f8f2"
 
-set-option -g status-style $c_line_bg_status
-set-option -g pane-active-border-style $c_pane_active
-set-option -g pane-border-style $c_pane_border
-set-option -g message-style $c_message
+set-window-option -g monitor-activity on
+
+set-option -g pane-active-border-style fg=$c_black
+set-option -g pane-border-style fg=$c_grey
+set-option -g message-style bg=$c_purple,fg=$c_black
+
+set-option -g status-style "bg=$c_grey"
 set-option -g status-justify left
-set-option -g status-left-length 40 #16
-set-option -g status-left '#{c_session_bg} #{c_session}#S #{c_line_bg} '
-set-option -g status-right '#{c_hostname_bg} #{c_hostname_symbol}⏻ #{c_hostname}#h #{c_line_bg} #{c_date_bg}#{c_date_symbol} 󰃰 #{c_date}%a %R #{c_line_bg} '
-set-window-option -g window-status-format '#{c_window_inactive_bg} #{c_window_inactive_index}#I:#{c_window_inactive_name}#W #{c_inactive_flag}#F '
-set-window-option -g window-status-current-format '#{c_window_active_bg} #{c_window_active_index}#I:#{c_window_active_name}#W #{c_window_active_flag}#F '
+set-option -g status-left-length 40 #16 #40
+
+set-option -g status-left "#[bg=$c_green] #[fg=$c_black]#S #[bg=$c_grey] "
+set-option -g status-right "#[bg=$c_orange] #[fg=$c_black] #(who | cut -d \" \" -f1) \
+#[bg=$c_yellow] #[fg=$c_black]⏻ #[fg=$c_black]#h \
+#[bg=$c_blue]#[fg=$c_black] 󰃰 #[fg=$c_black]%a %R "
+
+set-window-option -g window-status-format "#[bg=$c_grey] #[fg=$c_white]#I #[fg=$c_white]#W #[fg=$c_white]#F "
+set-window-option -g window-status-current-format "#[bg=$c_white] #[fg=$c_black]#I #[fg=$c_black]#W #[fg=$c_red]#F "
+
 set-option -g status-interval 60
 
-# Style 1 - Glyphs
-#c_session_fg="#[fg=colour235]"
-#c_hostname_fg="#[fg=colour235]"
-#c_date_fg="#[fg=colour235]"
-#c_window_active_fg="#[fg=colour236]"
-#c_window_inactive_fg="#[fg=colour239]"
-#
-#set-option -g status-style $c_line_bg_status
-#set-option -g pane-active-border-style $c_pane_active
-#set-option -g pane-border-style $c_pane_border
-#set-option -g message-style $c_message
-#set-option -g status-justify left
-#set-option -g status-left-length 40 #16
-#set-option -g status-left '#{c_session_bg} #{c_session}#S  #{c_line_bg}#{c_session_fg} '
-#set-option -g status-right '#{c_line_bg}#{c_hostname_fg}\
-##{c_hostname_bg}#{c_hostname_symbol} ⏻ \
-##{c_hostname}#h #{c_line_bg}#{c_line_bg}#{c_hostname_fg} \
-##{c_date_bg}#{c_date_symbol} 󰃰 #{c_date}%a %R #{c_line_bg}#{c_line_bg}#{c_date_fg} '
-#set-window-option -g window-status-format '#{c_line_bg}#{c_window_inactive_fg}\
-##{c_window_inactive_bg} #{c_window_inactive_index}#I:#{c_window_inactive_name}#W #{c_inactive_flag}#F #{c_line_bg}#{c_window_inactive_fg}'
-#set-window-option -g window-status-current-format '#{c_line_bg}#{c_window_active_fg}\
-##{c_window_active_bg} #{c_window_active_index}#I:#{c_window_active_name}#W #{c_window_active_flag}#F #{c_line_bg}#{c_window_active_fg}'
-#set-option -g status-interval 60
-
-# Style 2 - Multiple lines
+# Multiple lines
 #set -g  status-format[0] '#[align=left]Top left'
 #set -ag status-format[0] '#[align=centre]Top center'
 #set -ag status-format[0] '#[align=right]Top right'
