--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -7,6 +7,8 @@
     bind-key C-Space send-prefix
 
 # Sets
+    #set -g default-terminal "tmux-256color"
+    set -ag terminal-overrides ",xterm-256color:RGB"
     set -g history-limit 100000             # History limit
     set -g mouse on                         # Enable mouse mode (tmux 2.1 and above)
     set -s exit-empty off                   # Disable exit-empty
