--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -27,6 +27,7 @@
     unbind l    # last-window
     unbind r    # force redraw of the attached client
 
+# Remappings
 # Split panes
     bind | split-window -h
     bind - split-window
