--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -9,14 +9,14 @@
 # Sets
     #set -g default-terminal "tmux-256color"
     set -ag terminal-overrides ",xterm-256color:RGB"
-    set -g history-limit 100000             # History limit
-    set -g mouse on                         # Enable mouse mode (tmux 2.1 and above)
-    set -s exit-empty off                   # Disable exit-empty
-    set -g renumber-windows on              # Rename windows automatically 
-    setw -g mode-keys vi                    # Copy mode with vi-keys
-    set -s escape-time 1                    # Escape time. A value equal to 0 causes some strange caracters to appear. 50ms is good.
-    #set-option -g allow-rename off         # Don't rename windows automatically
-    #set-option -wg automatic-rename off    # Disable automatic renaming
+    set -g history-limit 100000                         # History limit
+    set -g mouse on                                     # Enable mouse mode (tmux 2.1 and above) (use shift to override mouse mode)
+    set -s exit-empty off                               # Disable exit-empty
+    set -g renumber-windows on                          # Rename windows automatically 
+    setw -g mode-keys vi                                # Copy mode with vi-keys
+    set -s escape-time 1                                # Escape time. A value equal to 0 causes some strange caracters to appear. 50ms is good.
+    #set-option -g allow-rename off                     # Don't rename windows automatically
+    #set-option -wg automatic-rename off                # Disable automatic renaming
 
 # Unbinds
     unbind |    # not used
@@ -37,6 +37,9 @@
     bind j select-pane -D
     bind k select-pane -U
     bind l select-pane -R
+
+# Layout
+    bind-key -n C-q split-window -v \; select-pane -t 1 \; split-window -h \; select-pane -t 0
 
 # Reload tmux config
     bind r source-file $HOME/.config/tmux/tmux.conf \; display "Config Reloaded!"
