--- a/config/tmux/tmux_statusline.conf
+++ b/config/tmux/tmux_statusline.conf
@@ -18,7 +18,7 @@ c_white="#f8f8f2"
 
 set-window-option -g monitor-activity on
 
-set-option -g pane-active-border-style fg=$c_black
+set-option -g pane-active-border-style fg=$c_purple
 set-option -g pane-border-style fg=$c_grey
 set-option -g message-style bg=$c_purple,fg=$c_black
 
