--- a/INSTALL/Brewfile
+++ b/INSTALL/Brewfile
@@ -15,13 +15,16 @@ brew "tmux"
 cask "discord"
 cask "eclipse-cpp"
 cask "firefox"
+cask "gns3"
 cask "godot"
 cask "iterm2"
 cask "keepassxc"
 cask "librewolf"
+cask "mactex"
 cask "remote-desktop-manager-free"
 cask "steam"
 cask "telegram-desktop"
 cask "visual-studio-code"
 cask "vlc"
+cask "vmware-fusion"
 cask "wireshark"
