--- a/INSTALL/Brewfile
+++ b/INSTALL/Brewfile
@@ -1,3 +1,4 @@
+tap "domq/gdb"
 tap "homebrew/bundle"
 brew "bat"
 brew "btop"
@@ -12,6 +13,7 @@ brew "neofetch"
 brew "ripgrep"
 brew "shellcheck"
 brew "tmux"
+cask "aldente"
 cask "discord"
 cask "eclipse-cpp"
 cask "firefox"
@@ -20,11 +22,28 @@ cask "godot"
 cask "iterm2"
 cask "keepassxc"
 cask "librewolf"
+cask "macs-fan-control"
 cask "mactex"
 cask "remote-desktop-manager-free"
+cask "stats"
 cask "steam"
 cask "telegram-desktop"
+cask "the-unarchiver"
+cask "virtualbox"
 cask "visual-studio-code"
 cask "vlc"
 cask "vmware-fusion"
+cask "whatsapp"
 cask "wireshark"
+vscode "james-yu.latex-workshop"
+vscode "ms-vscode-remote.remote-wsl"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.cpptools-extension-pack"
+vscode "ms-vscode.cpptools-themes"
+vscode "ms-vscode.makefile-tools"
+vscode "ms-vscode.powershell"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "pkief.material-icon-theme"
+vscode "streetsidesoftware.code-spell-checker"
+vscode "streetsidesoftware.code-spell-checker-portuguese"
+vscode "vscodevim.vim"
