--- a/config/strawberry/strawberry.conf
+++ b/config/strawberry/strawberry.conf
@@ -205,7 +205,7 @@ providers=AudD, Genius, Lyrics.ovh, LoloLyrics, Musixmatch, Stands4Lyrics
 [MainWindow]
 current_tab=7
 file_path=/home/operador/MountPoints/iphone/iTunes_Control
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x1c\0\0\x5U\0\0\x2\xff\0\0\0\x1\0\0\0\x35\0\0\x4k\0\0\x2\xe1\0\0\0\0\x2\0\0\0\x5V\0\0\0\0\0\0\0\x33\0\0\x5U\0\0\x2\xff)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x1c\0\0\x5U\0\0\x2\xcb\0\0\0\x1\0\0\0\x35\0\0\x4k\0\0\x2\xca\0\0\0\0\x2\0\0\0\x5V\0\0\0\0\0\0\0\x33\0\0\x5U\0\0\x2\xcb)
 hidden=false
 maximized=true
 minimized=false
@@ -273,7 +273,7 @@ volume=100
 column_alignments=@Variant(\0\0\0\x7f\0\0\0\x13\x43olumnAlignmentMap\0\0\0\0\v\0\0\0\x6\0\0\0\x82\0\0\0\a\0\0\0\x82\0\0\0\b\0\0\0\x82\0\0\0\t\0\0\0\x82\0\0\0\n\0\0\0\x82\0\0\0\f\0\0\0\x82\0\0\0\r\0\0\0\x82\0\0\0\xe\0\0\0\x82\0\0\0\x11\0\0\0\x82\0\0\0\x15\0\0\0\x82\0\0\0\x16\0\0\0\x82)
 current_playlist=2
 rating_locked=false
-state="@ByteArray(P,\x95\xf\x1\0\0\0\x1e\0\0\0\xf6\0\0\0\xd8\0\0\0\xa2\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1f\0\0\0\0\0\0\0!\0\0\0\0\0\0\0M\0\0\0L\0\0\0L\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0@\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0>\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1e\0\0\0\b\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\x11\0\0\0\x12\0\0\0\x13\0\0\0\x14\0\0\0\x15\0\0\0\x16\0\0\0\x17\0\0\0\x18\0\0\0\x19\0\0\0\x1a\0\0\0\x1b\0\0\0\x1c\0\0\0\x1d\0\0\0\x1e?\xce)|]>\x5G?\xcap}S\xca\xa5g?\xc3\xda\xf\xfd\xfa\xbd\x91\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\x9e\xc0\x31\x32\xaeT\xb9\0\0\0\0\0\0\0\0?\xa0\x46&~\x93\x44\xa1\0\0\0\0\0\0\0\0?\xb2\xdfUF\xe8\xe2\xd2?\xb2\xbf\xf6!T\xc3\x97?\xb2\x9e:}\r\x94\x41\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\xafV<u\xec[\xf7\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\xae\xb8Q\xeb\x85\x1e\xb8\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0)"
+state="@ByteArray(P,\x95\xf\x1\0\0\0 \0\0\0\xfa\0\0\0\xdb\0\0\0\xa4\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1f\0\0\0\0\0\0\0!\0\0\0\0\0\0\0N\0\0\0M\0\0\0M\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0@\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0 \0\0\0\b\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\x11\0\0\0\x12\0\0\0\x13\0\0\0\x14\0\0\0\x15\0\0\0\x16\0\0\0\x17\0\0\0\x18\0\0\0\x19\0\0\0\x1a\0\0\0\x1b\0\0\0\x1c\0\0\0\x1d\0\0\0\x1e\0\0\0\x1f\0\0\0 ?\xce)|]>\x5G?\xcap}S\xca\xa5g?\xc3\xda\xf\xfd\xfa\xbd\x91\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\x9e\xc0\x31\x32\xaeT\xb9\0\0\0\0\0\0\0\0?\xa0\x46&~\x93\x44\xa1\0\0\0\0\0\0\0\0?\xb2\xdfUF\xe8\xe2\xd2?\xb2\xbf\xf6!T\xc3\x97?\xb2\x9e:}\r\x94\x41\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\xafV<u\xec[\xf7\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\xae\xb8Q\xeb\x85\x1e\xb8\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0)"
 state_version=1
 
 [Qobuz]
