--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -39,7 +39,8 @@
     bind l select-pane -R
 
 # Layout
-    bind-key -n C-q split-window -v \; select-pane -t 1 \; split-window -h \; select-pane -t 0
+    bind-key -n C-1 split-window -v \; select-pane -t 1 \; split-window -h \; select-pane -t 0
+    bind-key -n C-2 new-window -n SO2324sv \; new-window -n RCp2324sv \;
 
 # Reload tmux config
     bind r source-file $HOME/.config/tmux/tmux.conf \; display "Config Reloaded!"
