--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -40,7 +40,8 @@
 
 # Layout
     bind-key -n C-1 split-window -v \; select-pane -t 1 \; split-window -h \; select-pane -t 0
-    bind-key -n C-2 new-window -n SO2324sv \; new-window -n RCp2324sv \;
+    bind-key -n C-2 new-window -n SO2324sv \; new-window -n MAN \; new-window -n Executing
+    bind-key -n C-3 new-window -n RCp2324sv
 
 # Reload tmux config
     bind r source-file $HOME/.config/tmux/tmux.conf \; display "Config Reloaded!"
