--- a/INSTALL/Brewfile
+++ b/INSTALL/Brewfile
@@ -3,37 +3,38 @@ tap "homebrew/bundle"
 brew "bat"
 brew "btop"
 brew "eza"
+brew "fastfetch"
 brew "fd"
 brew "fzf"
 brew "gdb"
 brew "htop"
 brew "make"
 brew "midnight-commander"
-brew "neofetch"
 brew "ripgrep"
 brew "shellcheck"
 brew "tmux"
-cask "aldente"
+cask "coteditor"
 cask "discord"
-cask "eclipse-cpp"
 cask "firefox"
-cask "gns3"
 cask "godot"
+cask "gog-galaxy"
 cask "iterm2"
 cask "keepassxc"
 cask "librewolf"
 cask "macs-fan-control"
 cask "mactex"
+cask "minecraft"
+cask "obsidian"
 cask "remote-desktop-manager-free"
-cask "stats"
 cask "steam"
 cask "telegram-desktop"
+cask "textmate"
+cask "tg-pro"
 cask "the-unarchiver"
 cask "virtualbox"
 cask "visual-studio-code"
 cask "vlc"
 cask "vmware-fusion"
-cask "whatsapp"
 cask "wireshark"
 vscode "james-yu.latex-workshop"
 vscode "ms-vscode-remote.remote-wsl"
