--- a/INSTALL/Brewfile
+++ b/INSTALL/Brewfile
@@ -1,5 +1,6 @@
 tap "domq/gdb"
 tap "homebrew/bundle"
+tap "jandedobbeleer/oh-my-posh"
 brew "bat"
 brew "btop"
 brew "eza"
@@ -13,6 +14,7 @@ brew "midnight-commander"
 brew "ripgrep"
 brew "shellcheck"
 brew "tmux"
+brew "jandedobbeleer/oh-my-posh/oh-my-posh"
 cask "coteditor"
 cask "discord"
 cask "firefox"
@@ -36,6 +38,7 @@ cask "visual-studio-code"
 cask "vlc"
 cask "vmware-fusion"
 cask "wireshark"
+#cask "zoom"
 vscode "james-yu.latex-workshop"
 vscode "ms-vscode-remote.remote-wsl"
 vscode "ms-vscode.cpptools"
