--- a/config/temp_work/tmux/tmux_statusline.conf
+++ b/config/temp_work/tmux/tmux_statusline.conf
@@ -6,7 +6,7 @@
 
 # Monokai.dark (classic) from Terminal.sexy
 c_black="#272822"
-c_grey="#75715e"
+c_gray="#75715e"
 c_red="#f92672"
 c_green="#a6e22e"
 c_orange="#fd971f" 
@@ -19,20 +19,20 @@ c_white="#f8f8f2"
 set-window-option -g monitor-activity on
 
 set-option -g pane-active-border-style fg=$c_purple
-set-option -g pane-border-style fg=$c_grey
+set-option -g pane-border-style fg=$c_gray
 set-option -g message-style bg=$c_purple,fg=$c_black
 
-set-option -g status-style "bg=$c_grey"
+set-option -g status-style "bg=$c_gray"
 set-option -g status-justify left
 set-option -g status-left-length 40 #16 #40
 set-option -g status-right-length 42
 
-set-option -g status-left "#[bg=$c_green] #[fg=$c_black]#S #[bg=$c_grey] "
+set-option -g status-left "#[bg=$c_green] #[fg=$c_black]#S #[bg=$c_gray] "
 set-option -g status-right "#[bg=$c_orange] #[fg=$c_black]  #(who | cut -d \" \" -f1) \
 #[bg=$c_yellow] #[fg=$c_black]⏻ #[fg=$c_black]#h \
 #[bg=$c_blue] #[fg=$c_black]󰃰 #[fg=$c_black]%a %R "
 
-set-window-option -g window-status-format "#[bg=$c_grey] #[fg=$c_white]#I #[fg=$c_white]#W #[fg=$c_white]#F "
+set-window-option -g window-status-format "#[bg=$c_gray] #[fg=$c_white]#I #[fg=$c_white]#W #[fg=$c_white]#F "
 set-window-option -g window-status-current-format "#[bg=$c_white] #[fg=$c_black]#I #[fg=$c_black]#W #[fg=$c_red]#F "
 
 set-option -g status-interval 60
