--- a/config/tmux/tmux_statusline.conf
+++ b/config/tmux/tmux_statusline.conf
@@ -4,14 +4,26 @@
 # Uncomment the style to apply
 # Status line configuration - check FORMATS and COMMANDS section
 
-# Monokai.dark (classic) from Terminal.sexy
+# Monokai.dark (classic) from Terminal.sexy [OLD]
+#c_black="#272822"
+#c_grey="#75715e"
+#c_red="#f92672"
+#c_green="#a6e22e"
+#c_orange="#fd971f" 
+#c_yellow="#ffd866"
+#c_blue="#66d9ef"
+#c_cyan="#a1efe4"
+#c_purple="#ae81ff"
+#c_white="#f8f8f2"
+
+# Monokai new scheme
 c_black="#272822"
 c_grey="#75715e"
-c_red="#f92672"
-c_green="#a6e22e"
-c_orange="#fd971f" 
-c_yellow="#ffd866"
-c_blue="#66d9ef"
+c_red="#ff0000"
+c_green="#87ff00"
+c_orange="#ff5f00" 
+c_yellow="#d7af00"
+c_blue="#00afff"
 c_cyan="#a1efe4"
 c_purple="#ae81ff"
 c_white="#f8f8f2"
