--- a/config/ohmyposh/nmbrito.omp.toml
+++ b/config/ohmyposh/nmbrito.omp.toml
@@ -4,13 +4,16 @@ console_title_template = "{{ .Shell }} in {{ .Folder }}"
 
 [palette]
     black="#272822"
+    brown="#87875f"
     gray="#75715e"
-    red="#f92672"
+    gray2="#585858"
+    red="#ff0000"
     green="#87ff00"
     green2="#5fd700"
     orange="#ff5f00"
-    yellow="#ffd866"
-    blue="#66d9ef"
+    yellow="#d7af00"
+    blue="#00afff"
+    blue2="#66d9ef"
     cyan="#a1efe4"
     purple="#ae81ff"
     white="#f8f8f2"
@@ -23,20 +26,6 @@ console_title_template = "{{ .Shell }} in {{ .Folder }}"
 #    orange="#fd971f"
 #    yellow="#ffd866"
 #    blue="#66d9ef"
-#    cyan="#a1efe4"
-#    purple="#ae81ff"
-#    white="#f8f8f2"
-
-#[palette] New
-#    gray="#585858"
-#    red="#ff0000"          # Also PromptError
-#    yellow="#d7af00"
-#    blue="#00afff"         # Also DirectoryAnchor
-#    orange="#ff5f00"
-#    green="#5fd700"        # Also PromptOk
-#    green2="#87ff00"       # Also OS
-
-#    black="#272822"
 #    cyan="#a1efe4"
 #    purple="#ae81ff"
 #    white="#f8f8f2"
@@ -72,7 +61,7 @@ console_title_template = "{{ .Shell }} in {{ .Folder }}"
         style = "plain"
         background = "transparent"
         foreground = "p:orange"
-        template = "{{ if .SSHSession }} {{ end }}{{ .UserName }}{{ .UserName }}@{{ .HostName }} "
+        template = "{{ if .SSHSession }} {{ end }}{{ .UserName }}@{{ .HostName }} "
 
     [[blocks.segments]]
         type = "text"
@@ -97,12 +86,13 @@ console_title_template = "{{ .Shell }} in {{ .Folder }}"
         background = "transparent"
         foreground = "p:green"
         foreground_templates = [
-            "{{ if or (.Working.Changed) (.Staging.Changed) }}p:orange{{ end }}",
+            "{{ if or (.Working.Changed) (.Staging.Changed) }}p:yellow{{ end }}",
             "{{ if and (gt .Ahead 0) (gt .Behind 0) }}p:purple{{ end }}",
             "{{ if gt .Ahead 0 }}p:green{{ end }}",
             "{{ if gt .Behind 0 }}p:red{{ end }}"
         ]
         template = "{{ if .UpstreamURL }}{{ url .UpstreamIcon .UpstreamURL }}{{ end }}{{ .HEAD }} {{ if .BranchStatus }}{{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}  {{ .Working.String }}{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}"
+        #template = "{{ .UpstreamIcon }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}  {{ .Working.String }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end }}"
 
     [blocks.segments.properties]
         branch_max_length = 25
@@ -122,6 +112,13 @@ console_title_template = "{{ .Shell }} in {{ .Folder }}"
         background = "transparent"
         foreground = "p:gray"
         template = "╰─"
+
+    [[blocks.segments]]
+        type = "root"
+        style = "plain"
+        background = "transparent"
+        foreground = "p:red"
+        template = "[ROOT] "
 
     [[blocks.segments]]
         type = "text"
@@ -144,8 +141,8 @@ console_title_template = "{{ .Shell }} in {{ .Folder }}"
         foreground = "p:yellow"
         template = "{{ div .Ms 1000 }}s"
 
-    [blocks.segments.properties]
-        threshold = 5000
+        [blocks.segments.properties]
+            threshold = 5000
 
 [transient_prompt]
     background = "transparent"
@@ -154,5 +151,4 @@ console_title_template = "{{ .Shell }} in {{ .Folder }}"
         " {{if eq .Code 0}} p:green2{{ end }}"
     ]
     template = "❯ "
-
 
