--- a/config/colorscheme.conf
+++ b/config/colorscheme.conf
@@ -1,8 +1,9 @@
 New colorscheme:
 black   = #272822
 brown   = #87875f
-gray    = #75715e
+gray    = #C0C0C0 
 gray2   = #585858
+gray3   = #75715e
 red     = #ff0000
 green   = #87ff00
 green2  = #5fd700
