--- a/config/tmux/tmux_statusline.conf
+++ b/config/tmux/tmux_statusline.conf
@@ -5,28 +5,28 @@
 # Status line configuration - check FORMATS and COMMANDS section
 
 # Monokai.dark (classic) from Terminal.sexy [OLD]
-#c_black="#272822"
-#c_grey="#75715e"
-#c_red="#f92672"
-#c_green="#a6e22e"
-#c_orange="#fd971f" 
-#c_yellow="#ffd866"
-#c_blue="#66d9ef"
-#c_cyan="#a1efe4"
-#c_purple="#ae81ff"
-#c_white="#f8f8f2"
-
-# Monokai new scheme
 c_black="#272822"
 c_grey="#75715e"
-c_red="#ff0000"
-c_green="#87ff00"
-c_orange="#ff5f00" 
-c_yellow="#d7af00"
-c_blue="#00afff"
+c_red="#f92672"
+c_green="#a6e22e"
+c_orange="#fd971f" 
+c_yellow="#ffd866"
+c_blue="#66d9ef"
 c_cyan="#a1efe4"
 c_purple="#ae81ff"
 c_white="#f8f8f2"
+
+# Monokai new scheme
+#c_black="#272822"
+#c_grey="#75715e"
+#c_red="#ff0000"
+#c_green="#87ff00"
+#c_orange="#ff5f00" 
+#c_yellow="#d7af00"
+#c_blue="#00afff"
+#c_cyan="#a1efe4"
+#c_purple="#ae81ff"
+#c_white="#f8f8f2"
 
 set-window-option -g monitor-activity on
 
@@ -40,7 +40,7 @@ set-option -g status-left-length 40 #16 #40
 set-option -g status-right-length 44
 
 set-option -g status-left "#[bg=$c_green] #[fg=$c_black]#S #[bg=$c_grey] "
-set-option -g status-right "#[bg=$c_orange] #[fg=$c_black]  #(who | cut -d \" \" -f1) \
+set-option -g status-right "#[bg=$c_orange] #[fg=$c_black] #(who | cut -d \" \" -f1) \
 #[bg=$c_yellow] #[fg=$c_black]⏻ #[fg=$c_black]#h \
 #[bg=$c_blue] #[fg=$c_black]󰃰 #[fg=$c_black]%a %R "
 
