--- a/config/tmux/tmux_statusline.conf
+++ b/config/tmux/tmux_statusline.conf
@@ -4,48 +4,36 @@
 # Uncomment the style to apply
 # Status line configuration - check FORMATS and COMMANDS section
 
-# Monokai.dark (classic) from Terminal.sexy [OLD]
-c_black="#272822"
-c_grey="#75715e"
-c_red="#f92672"
-c_green="#a6e22e"
-c_orange="#fd971f" 
-c_yellow="#ffd866"
-c_blue="#66d9ef"
-c_cyan="#a1efe4"
-c_purple="#ae81ff"
-c_white="#f8f8f2"
-
-# Monokai new scheme
-#c_black="#272822"
-#c_grey="#75715e"
-#c_red="#ff0000"
-#c_green="#87ff00"
-#c_orange="#ff5f00" 
-#c_yellow="#d7af00"
-#c_blue="#00afff"
-#c_cyan="#a1efe4"
-#c_purple="#ae81ff"
-#c_white="#f8f8f2"
+# Monokai Merged
+nmbcolor_black="#272822"
+nmbcolor_grey="#75715e"
+nmbcolor_red="#ff0000"
+nmbcolor_green="#a6e22e"
+nmbcolor_orange="#ff5f00" 
+nmbcolor_yellow="#ffd866"
+nmbcolor_blue="#00afff"
+nmbcolor_cyan="#a1efe4"
+nmbcolor_purple="#ae81ff"
+nmbcolor_white="#f8f8f2"
 
 set-window-option -g monitor-activity on
 
-set-option -g pane-active-border-style fg=$c_purple
-set-option -g pane-border-style fg=$c_grey
-set-option -g message-style bg=$c_purple,fg=$c_black
+set-option -g pane-active-border-style fg=$nmbcolor_purple
+set-option -g pane-border-style fg=$nmbcolor_grey
+set-option -g message-style bg=$nmbcolor_purple,fg=$nmbcolor_black
 
-set-option -g status-style "bg=$c_grey"
+set-option -g status-style "bg=$nmbcolor_grey"
 set-option -g status-justify left
 set-option -g status-left-length 40 #16 #40
 set-option -g status-right-length 44
 
-set-option -g status-left "#[bg=$c_green] #[fg=$c_black]#S #[bg=$c_grey] "
-set-option -g status-right "#[bg=$c_orange] #[fg=$c_black] #(who | cut -d \" \" -f1) \
-#[bg=$c_yellow] #[fg=$c_black]⏻ #[fg=$c_black]#h \
-#[bg=$c_blue] #[fg=$c_black]󰃰 #[fg=$c_black]%a %R "
+set-option -g status-left "#[bg=$nmbcolor_green] #[fg=$nmbcolor_black]#S #[bg=$nmbcolor_grey] "
+set-option -g status-right "#[bg=$nmbcolor_orange] #[fg=$nmbcolor_black] #(who | cut -d \" \" -f1) \
+#[bg=$nmbcolor_yellow] #[fg=$nmbcolor_black]⏻ #[fg=$nmbcolor_black]#h \
+#[bg=$nmbcolor_blue] #[fg=$nmbcolor_black]󰃰 #[fg=$nmbcolor_black]%a %R "
 
-set-window-option -g window-status-format "#[bg=$c_grey] #[fg=$c_white]#I #[fg=$c_white]#W #[fg=$c_white]#F "
-set-window-option -g window-status-current-format "#[bg=$c_white] #[fg=$c_black]#I #[fg=$c_black]#W #[fg=$c_red]#F "
+set-window-option -g window-status-format "#[bg=$nmbcolor_grey] #[fg=$nmbcolor_white]#I #[fg=$nmbcolor_white]#W #[fg=$nmbcolor_white]#F "
+set-window-option -g window-status-current-format "#[bg=$nmbcolor_white] #[fg=$nmbcolor_black]#I #[fg=$nmbcolor_black]#W #[fg=$nmbcolor_red]#F "
 
 set-option -g status-interval 60
 
