--- a/config/ohmyposh/nmbrito.omp.toml
+++ b/config/ohmyposh/nmbrito.omp.toml
@@ -1,155 +1,157 @@
-version = 2
+console_title_template = '{{ .Shell }} in {{ .Folder }}'
+version = 3
 final_space = true
-console_title_template = "{{ .Shell }} in {{ .Folder }}"
 
 [palette]
-    black="#272822"
-    brown="#87875f"
-    gray="#C0C0C0"
-    gray2="#585858"
-    gray3="#75715e"
-    red="#ff0000"
-    green="#87ff00"
-    green2="#5fd700"
-    orange="#ff5f00"
-    yellow="#d7af00"
-    blue="#00afff"
-    blue2="#66d9ef"
-    cyan="#a1efe4"
-    purple="#ae81ff"
-    white="#f8f8f2"
-
-#[palette] Old
-#    black="#272822"
-#    gray="#75715e"
-#    red="#f92672"
-#    green="#a6e22e"
-#    orange="#fd971f"
-#    yellow="#ffd866"
-#    blue="#66d9ef"
-#    cyan="#a1efe4"
-#    purple="#ae81ff"
-#    white="#f8f8f2"
-
-[[blocks]]
-    type = "prompt"
-    alignment = "left"
-    newline = true
-
-    [[blocks.segments]]
-        type = "text"
-        style = "plain"
-        background = "transparent"
-        foreground = "p:gray3"
-        template = "╭─ "
-
-    [[blocks.segments]]
-        type = "os"
-        style = "plain"
-        foreground = "p:green"
-        background = "transparent"
-        template = "{{ if .WSL }}WSL at {{ end }}{{ .Icon }} "
-
-    [[blocks.segments]]
-        type = "text"
-        style = "plain"
-        background = "transparent"
-        foreground = "p:gray"
-        template = "with "
-
-    [[blocks.segments]]
-        type = "session"
-        style = "plain"
-        background = "transparent"
-        foreground = "p:orange"
-        template = "{{ if .SSHSession }} {{ end }}{{ .UserName }}@{{ .HostName }} "
-
-    [[blocks.segments]]
-        type = "text"
-        style = "plain"
-        background = "transparent"
-        foreground = "p:gray"
-        template = "in "
-
-    [[blocks.segments]]
-        type = "path"
-        style = "plain"
-        template = " {{ path .Path .Location }} "
-        background = "transparent"
-        foreground = "p:blue"
-
-        [blocks.segments.properties]
-            style = "full"
-
-    [[blocks.segments]]
-        type = "git"
-        style = "plain"
-        background = "transparent"
-        foreground = "p:green"
-        foreground_templates = [
-            "{{ if or (.Working.Changed) (.Staging.Changed) }}p:yellow{{ end }}",
-            "{{ if and (gt .Ahead 0) (gt .Behind 0) }}p:purple{{ end }}",
-            "{{ if gt .Ahead 0 }}p:green{{ end }}",
-            "{{ if gt .Behind 0 }}p:red{{ end }}"
-        ]
-        template = "{{ if .UpstreamURL }}{{ url .UpstreamIcon .UpstreamURL }}{{ end }}{{ .HEAD }} {{ if .BranchStatus }}{{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}  {{ .Working.String }}{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}"
-        #template = "{{ .UpstreamIcon }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}  {{ .Working.String }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end }}"
-
-    [blocks.segments.properties]
-        branch_max_length = 25
-        fetch_status = true
-        fetch_upstream_icon = true
-        branch_ahead_icon = "⇡"
-        branch_behind_icon = "⇣" 
-
-[[blocks]]
-    type = "prompt"
-    alignment = "left"
-    newline = true
-
-    [[blocks.segments]]
-        type = "text"
-        style = "plain"
-        background = "transparent"
-        foreground = "p:gray3"
-        template = "╰─"
-
-    [[blocks.segments]]
-        type = "root"
-        style = "plain"
-        background = "transparent"
-        foreground = "p:red"
-        template = "[ROOT] "
-
-    [[blocks.segments]]
-        type = "text"
-        style = "plain"
-        background = "transparent"
-        foreground_templates = [
-            "{{ if gt .Code 0 }}p:red{{ end }}",
-            "{{ if eq .Code 0 }}p:green2{{ end }}"
-        ]
-        template = "❯"
-
-[[blocks]]
-    type = "rprompt"
-    overflow = "hidden"
-
-    [[blocks.segments]]
-        type = "executiontime"
-        style = "plain"
-        background = "transparent"
-        foreground = "p:yellow"
-        template = "{{ div .Ms 1000 }}s"
-
-        [blocks.segments.properties]
-            threshold = 5000
+  black = '#272822'
+  blue = '#00afff'
+  blue2 = '#66d9ef'
+  brown = '#87875f'
+  cyan = '#a1efe4'
+  gray = '#C0C0C0'
+  gray2 = '#585858'
+  gray3 = '#75715e'
+  green = '#87ff00'
+  green2 = '#5fd700'
+  orange = '#ff5f00'
+  purple = '#ae81ff'
+  red = '#ff0000'
+  white = '#f8f8f2'
+  yellow = '#d7af00'
 
 [transient_prompt]
-    background = "transparent"
-    foreground_templates = [
-        " {{if gt .Code 0}} p:red{{ end }}",
-        " {{if eq .Code 0}} p:green2{{ end }}"
-    ]
-    template = "❯ "
+  template = '❯ '
+  background = 'transparent'
+  foreground_templates = [' {{if gt .Code 0}} p:red{{ end }}', ' {{if eq .Code 0}} p:green2{{ end }}']
 
+[[blocks]]
+  type = 'prompt'
+  alignment = 'left'
+  newline = true
+
+  [[blocks.segments]]
+    template = '╭─ '
+    foreground = 'p:gray3'
+    background = 'transparent'
+    type = 'text'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = '{{ if .WSL }}WSL at {{ end }}{{ .Icon }} '
+    foreground = 'p:green'
+    background = 'transparent'
+    type = 'os'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = 'with '
+    foreground = 'p:gray'
+    background = 'transparent'
+    type = 'text'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = '{{ if .SSHSession }} {{ end }}{{ .UserName }}@{{ .HostName }} '
+    foreground = 'p:orange'
+    background = 'transparent'
+    type = 'session'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = 'in '
+    foreground = 'p:gray'
+    background = 'transparent'
+    type = 'text'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = ' {{ path .Path .Location }} '
+    foreground = 'p:blue'
+    background = 'transparent'
+    type = 'path'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+      style = 'full'
+
+  [[blocks.segments]]
+    template = '{{ if .UpstreamURL }}{{ url .UpstreamIcon .UpstreamURL }}{{ end }}{{ .HEAD }} {{ if .BranchStatus }}{{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}  {{ .Working.String }}{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}'
+    foreground = 'p:green'
+    background = 'transparent'
+    type = 'git'
+    style = 'plain'
+    foreground_templates = ['{{ if or (.Working.Changed) (.Staging.Changed) }}p:yellow{{ end }}', '{{ if and (gt .Ahead 0) (gt .Behind 0) }}p:purple{{ end }}', '{{ if gt .Ahead 0 }}p:green{{ end }}', '{{ if gt .Behind 0 }}p:red{{ end }}']
+
+    [blocks.segments.properties]
+      branch_ahead_icon = '⇡'
+      branch_behind_icon = '⇣'
+      branch_max_length = 25
+      cache_duration = 'none'
+      fetch_status = true
+      fetch_upstream_icon = true
+
+[[blocks]]
+  type = 'prompt'
+  alignment = 'left'
+  newline = true
+
+  [[blocks.segments]]
+    template = '╰─'
+    foreground = 'p:gray3'
+    background = 'transparent'
+    type = 'text'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = '[ROOT] '
+    foreground = 'p:red'
+    background = 'transparent'
+    type = 'root'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = '❯'
+    background = 'transparent'
+    type = 'text'
+    style = 'plain'
+    foreground_templates = ['{{ if gt .Code 0 }}p:red{{ end }}', '{{ if eq .Code 0 }}p:green2{{ end }}']
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+[[blocks]]
+  type = 'rprompt'
+  overflow = 'hidden'
+
+  [[blocks.segments]]
+    template = '{{ div .Ms 1000 }}s'
+    foreground = 'p:yellow'
+    background = 'transparent'
+    type = 'executiontime'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+      threshold = 5000
