--- a/config/tmux/tmux_statusline.conf
+++ b/config/tmux/tmux_statusline.conf
@@ -5,16 +5,28 @@
 # Status line configuration - check FORMATS and COMMANDS section
 
 # Monokai Merged
-nmbcolor_black="#272822"
-nmbcolor_grey="#75715e"
-nmbcolor_red="#ff0000"
-nmbcolor_green="#a6e22e"
-nmbcolor_orange="#ff5f00" 
-nmbcolor_yellow="#ffd866"
-nmbcolor_blue="#00afff"
-nmbcolor_cyan="#a1efe4"
-nmbcolor_purple="#ae81ff"
-nmbcolor_white="#f8f8f2"
+#nmbcolor_black="#272822"   # Color Black
+#nmbcolor_grey="#75715e"    # Color Grey
+#nmbcolor_red="#ff0000"     # Color Red
+#nmbcolor_green="#a6e22e"   # Color Green
+#nmbcolor_orange="#ff5f00"  # Color Orange
+#nmbcolor_yellow="#ffd866"  # Color Yellow
+#nmbcolor_blue="#00afff"    # Color Blue
+#nmbcolor_cyan="#a1efe4"    # Color Cyan
+#nmbcolor_purple="#ae81ff"  # Color Purple
+#nmbcolor_white="#f8f8f2"   # Color White
+
+# Edna Custom
+nmbcolor_black="#272822"    # Color Black
+nmbcolor_grey="#597682"     # Color Grey
+nmbcolor_red="#d54f8a"      # Color Red
+nmbcolor_green="#1addb3"    # Color Green
+nmbcolor_orange="#f67400"   # Color Orange
+nmbcolor_yellow="#efd25c"   # Color Yellow
+nmbcolor_blue="#11b3e4"     # Color Blue
+nmbcolor_cyan="#00cce4"     # Color Cyan
+nmbcolor_purple="#cb76f7"   # Color Purple
+nmbcolor_white="#f8f8f2"    # Color White
 
 set-window-option -g monitor-activity on
 
