--- a/config/rclone/rclone-1drivePersonal-mount.service
+++ b/config/rclone/rclone-1drivePersonal-mount.service
@@ -1,20 +1,22 @@
 [Unit]
 Description=RClone Mount OneDrive
-#AssertPathIsDirectory=/home/nmbrito/OneDrive-Pessoal
+AssertPathIsDirectory=/home/nmbrito/OneDrive-Pessoal
 Wants=network-online.target
 After=network-online.target
-#StartLimitIntervalSec=400
-#StartLimitBurst=3
 
 [Service]
-Type=simple
-ExecStart=/usr/bin/rclone mount --vfs-cache-mode writes 1DrivePessoal: /home/nmbrito/OneDrive-Pessoal
+Type=notify
+
+ExecStartPre=/bin/mkdir -p /home/nmbrito/OneDrive-Pessoal
+
+ExecStart=/usr/bin/rclone mount 1DrivePessoal: /home/nmbrito/OneDrive-Pessoal \
+    --vfs-cache-mode writes \
+    --vfs-cache-max-size 10G
+
 ExecStop=/bin/fusermount -u /home/nmbrito/OneDrive-Pessoal
-User=nmbrito
-Group=nmbrito
+
 Restart=on-failure
-#RestartSec=10
+RestartSec=10
 
 [Install]
 WantedBy=default.target
-
